--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -793,7 +793,8 @@ $transitions: (
   display: grid;
   grid-auto-rows: 1fr;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 25px;
+  grid-column-gap: 2em;
+  grid-row-gap: 2.5em;
   margin-top: 15px;
   text-align: center;
   &__link {
@@ -842,7 +843,7 @@ $transitions: (
   &__container-title {
     padding: 10px 15px;
     // color: getColor(dark);
-    height: 64px;
+    height: 61px;
     overflow: hidden;
     border-top: 1px solid getColor(secondary);
     background-color: getColor(main);
@@ -865,6 +866,7 @@ $transitions: (
     background-color: lighten(getColor(secondary), 7%);
   }
   &__title {
+    font-size: 0.9em;
   }
   &__date {
     bottom: 0px;
@@ -1351,6 +1353,7 @@ $transitions: (
   animation: fadeScale getTransition(smooth);
   &__left-side {
     padding: 10px;
+    position: relative;
   }
   &__right-side {
     flex: 1;
@@ -1476,6 +1479,14 @@ $transitions: (
     .btn__msg {
       bottom: 40px;
     }
+  }
+  &__btn-delete {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    padding: 4px;
+    z-index: 4;
+    font-size: 0.9em;
   }
 }
 
@@ -1724,5 +1735,56 @@ $transitions: (
   }
   &__plug-icon {
     font-size: 3.5em;
+  }
+}
+
+.user {
+  display: flex;
+  &__image-side {
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 15px;
+  }
+  &__content-side {
+    border: 1px solid black;
+    flex: 1;
+  }
+  &__brief {
+    position: relative;
+  }
+  &__container-image {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid getColor(secondary);
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid getColor(secondary);
+  }
+  &__type-icon {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    border: 1px solid getColor(secondary);
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border-radius: 50%;
+    background-color: white;
+  }
+  &__username {
+    text-align: center;
+    font-size: 1.4em;
+    margin: 15px 0;
+  }
+  &__btn-bookmarks {
+    padding: 13px 0px;
   }
 }
