--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@ body {
   font-family: "Quicksand", sans-serif;
   color: #333;
   /* background-color: rgb(248, 248, 248); */
+  scroll-behavior: smooth;
 }
 select,
 input,
